Add unsigned long type (#160)
This patch adds `unsigned long` type as follows.
  - The `unsigned long` type is an unsigned integer type that has values
    in the range [0, 4294967295].

ISSUE=#158

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@ Jaeseok Yoon <yjaeseok@gmail.com>
 Jinho Bang <jinho.bang@samsung.com>
 Taxoo Kim <taxookim@gmail.com>
 Yeonwoo Jo <yeonwoo.jo.92@gmail.com>
+Yonghyun Ryu <usefulhyun@gmail.com>
